CHANGELOG
=========

29 October 2014 - Version 1.9-rc3
---------------------------------
  * Issues:
    #2353369: Improve accessibility of ShareThis links

20 October 2014 - Version 1.9-rc2
---------------------------------
  * Module upgrade:
    #2359883: Module upgrade: Menu Attributes

  * Issues:
    #2196447: Recreate openfed features
    #2358589: Add language to CMS view content filter
    #2037919: Add node id to CMS view content filter
    #2210161: Admin_menu only in english on admin pages

17 October 2014 - Version 1.9-rc1
---------------------------------
  * Core upgrade:
    #2317197: Core update: Drupal 7.32

  * Module upgrades:
    #2341691: Module upgrade: Override Node Options
    #2344769: Module upgrade: Date
    #2346693: Module upgrade: Media: YouTube
    #2351215: Module upgrade: Metatag
    #2351213: Module upgrade: Localization update
    #2352879: Module upgrade: Webform
    #2338637: Module upgrade: Field Conditional State
    #2357507: Module upgrade: CKEditor
    #2357331: Module upgrade: Calendar

  * Library upgrades:
    #2308113: Library upgrade: CKEditor
    #2324427: Library upgrade: Colorbox

  * Theme upgrades:
    #2329161: Theme upgrade: Openfed Nerra

  * Issues:
    #2309667: Youtube embedded support for title and name tags
    #2309659: Accessible controls for Flash/Youtube embedded videos
    #2353369: Improve accessibility of ShareThis links
    #2358133: Role delegation: Forbid editing of accounts that have higher
              permission than current user 

25 September 2014 - Version 1.9-beta2
-------------------------------------
  * Module upgrades:
    #2344711: Module upgrade: Metatag

23 September 2014 - Version 1.9-beta1
-------------------------------------
  * Removed modules:
    #2316391: Remove module: Draggable Views
    #2329145: Remove module: Page Title

  * Module upgrades:
    #2292389: Module upgrade: Flag
    #2290899: Module upgrade: GMap 
    #2323201: Module upgrade: Localization update